Updated the html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="audio-player">
-        <h1>🎵 Audio do meu primo favorito</h1>
+        <h1>🎵 Audio incrivel atrave-te a ouvir sem medo</h1>
         <p class="description">
           Ouve este belo som meu primo terror das meninas
         </p>
