--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Audio Player</title>
+    <title>Vozes da Mudança | Pessoas & Transformação</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <div class="audio-player">
-        <h1>🎵 Audio incrivel atrave-te a ouvir sem medo</h1>
+        <h1>✨ Pessoas, Essência e Transformação</h1>
         <p class="description">
-          Ouve este belo som meu primo terror das meninas
+          Uma jornada sobre o que somos e o poder de mudar nossas vidas
         </p>
 
         <div class="audio-wrapper">
@@ -23,7 +23,11 @@
         </div>
 
         <div class="info">
-          <p>📌 Se gostaste sobescreve e da like</p>
+          <p>
+            💭 "Não somos definidos pelo que fomos, mas pelo que escolhemos nos
+            tornar."
+          </p>
+          <p class="subtitle">Ouça e reflita sobre o impacto que podemos ter</p>
         </div>
       </div>
     </div>
