Hamburger menu and new pages
Created a menu on the website and created new pages for it. Created the about me page, histories page and contact page with html and css. The dropdown menu is handled using js.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Hamburger Menu -->
+    <nav class="navbar">
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="dropdown-menu" id="dropdownMenu">
+        <a href="index.html">🏠 Início</a>
+        <a href="about.html">👥 Sobre</a>
+        <a href="stories.html">📖 Histórias</a>
+        <a href="contact.html">✉️ Contato</a>
+      </div>
+    </nav>
+
     <div class="container">
       <div class="audio-player">
         <h1>✨ Pessoas, Essência e Transformação</h1>
@@ -31,5 +46,7 @@
         </div>
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
