--- a/index.html
+++ b/index.html
@@ -7,21 +7,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Hamburger Menu -->
-    <nav class="navbar">
-      <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div class="dropdown-menu" id="dropdownMenu">
-        <a href="index.html">🏠 Início</a>
-        <a href="about.html">👥 Sobre</a>
-        <a href="stories.html">📖 Histórias</a>
-        <a href="contact.html">✉️ Contato</a>
-      </div>
-    </nav>
-
     <div class="container">
       <div class="audio-player">
         <h1>✨ Pessoas, Essência e Transformação</h1>
@@ -31,6 +16,7 @@
 
         <div class="audio-wrapper">
           <audio id="audioPlayer" controls>
+            <source src="audio.wav" type="audio/wav" />
             <source src="audio.mp3" type="audio/mpeg" />
             <source src="audio.ogg" type="audio/ogg" />
             Your browser does not support the audio element.
@@ -43,10 +29,13 @@
             tornar."
           </p>
           <p class="subtitle">Ouça e reflita sobre o impacto que podemos ter</p>
+
+          <div class="button-group">
+            <a href="#" class="btn">📄 Transcript</a>
+            <a href="transcricao.html" class="btn">📝 Transcrição</a>
+          </div>
         </div>
       </div>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
