Transcript in english
Added an html document with the transcript in english of the audio.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
   <body>
     <div class="container">
       <div class="audio-player">
-        <h1>✨ Pessoas, Essência e Transformação</h1>
-        <p class="description">
-          Uma jornada sobre o que somos e o poder de mudar nossas vidas
-        </p>
+        <h1>✨</h1>
 
         <div class="audio-wrapper">
           <audio id="audioPlayer" controls>
@@ -24,14 +21,8 @@
         </div>
 
         <div class="info">
-          <p>
-            💭 "Não somos definidos pelo que fomos, mas pelo que escolhemos nos
-            tornar."
-          </p>
-          <p class="subtitle">Ouça e reflita sobre o impacto que podemos ter</p>
-
           <div class="button-group">
-            <a href="#" class="btn">📄 Transcript</a>
+            <a href="transcript.html" class="btn">📄 Transcript</a>
             <a href="transcricao.html" class="btn">📝 Transcrição</a>
           </div>
         </div>
