--- a/transcricao.html
+++ b/transcricao.html
@@ -17,9 +17,6 @@
             <p>
               <strong>(Quem é você?)</strong> Eu sou uma espécie de espelho
               partido. Quero eu dizer com isto que não me reconheço, às vezes.
-            </p>
-
-            <p>
               <strong
                 >(Se pudesse mudar alguma coisa na sua vida, o que
                 seria?)</strong
@@ -42,9 +39,9 @@
 
             <p>
               Não sei quem sou. Neste momento não sei quem sou. É só o que eu
-              posso dizer. Provavelmente não tinha nascido. Era a única coisa
-              que eu mudava na vida. Na fase que eu estou, talvez se não tivesse
-              nascido... não... não tinha tanto...
+              posso dizer. [...] Provavelmente não tinha nascido. Era a única
+              coisa que eu mudava na vida. Na fase que eu estou, talvez se não
+              tivesse nascido... não... não tinha tanto...
             </p>
 
             <p>
@@ -57,9 +54,6 @@
               tímida.. quieto, na minha... até ter alguma confiança das pessoas
               com quem eu passo o dia a dia. Já me começo a soltar, já começo a
               brincar, por ai fora...
-            </p>
-
-            <p>
               <strong>(O que mudava na sua vida?)</strong> Absolutamente nada.
               Cheguei numa parte da minha vida em que já consegui ver que nós
               estamos onde estamos, à hora que estamos, no momento em que
@@ -72,9 +66,9 @@
               que não sou ninguém. <strong>(Não?)</strong> Não. A minha vida
               está de pernas para o ar e neste momento penso que não sou
               ninguém. <strong>(Mas qual é o motivo?)</strong> O motivo é... é
-              um divórcio que eu tive. <strong>(Muito bem.)</strong> A minha
-              vida mudava toda. De pernas para o ar. Toda. Desde o principio até
-              o fim.
+              um divórcio que eu tive. <strong>(Muito bem.)</strong> [...] A
+              minha vida mudava toda. De pernas para o ar. Toda. Desde o
+              principio até o fim.
               <strong
                 >(É lá. Boa resposta. Gostei dessa resposta também. Eu também
                 queria fazer isso.)</strong
@@ -157,7 +151,7 @@
               Eu sou o José [...[ de Oliveira.
               <strong
                 >(Se pudesse mudar alguma coisa na tua vida, o que
-                seria?</strong
+                seria?)</strong
               >
               O que seria? Queria ir para a minha terra.
             </p>
@@ -168,8 +162,8 @@
               de idade. Sou uma pessoa que... sou muito teimosa em relação a
               conseguir os meus objetivos. Não sou negativa. Gosto de ajudar
               toda a gente. Naquilo que eu puder, né. E, enfim, já sou mãe, já
-              sou bisavó... olha, é uma vida! Nunca me tinha casado. Essa era
-              logo. Pronto. E depois? Se pudesse e tivesse algum dinheiro,
+              sou bisavó... olha, é uma vida! [...] Nunca me tinha casado. Essa
+              era logo. Pronto. E depois? Se pudesse e tivesse algum dinheiro,
               tratava de ter um negócio próprio.
             </p>
 
@@ -242,7 +236,7 @@
               >
               O que seria? O que seria? Estar na minha posição... eu não posso
               nada. Passo a minha vida. Ia passear, e pronto. É isso que eu
-              quero? Paz e sossego. <strong>(Obrigado.)</strong>
+              quero. Paz e sossego. <strong>(Obrigado.)</strong>
             </p>
 
             <p>
@@ -293,7 +287,7 @@
 
             <p>
               Eu sou a Andreia, tenho 26 anos, vivo no Porto Abri um café...
-              Abri um bar, chupitos bar, bem-vindos ao bar. E o que é que eu
+              Abri um bar, Chupitos bar, bem-vindos ao bar. E o que é que eu
               mudaria na minha vida? Isso é uma pergunta difícil, porque eu sou
               uma pessoa super feliz, tenho a melhor família do mundo, tenho o
               melhor namorado do mundo, tenho o meu próprio negócio, tenho bons
